--- a/PPN_ESP32_StacjaPogodowa_Marchewka_181257/main/CMakeLists.txt
+++ b/PPN_ESP32_StacjaPogodowa_Marchewka_181257/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "PPN_ESP32_StacjaPogodowa_Marchewka_181257.c"
-                    INCLUDE_DIRS "." REQUIRES esp_driver_gpio)
+idf_component_register(SRCS "PPN_ESP32_StacjaPogodowa_Marchewka_181257.c" "../app/fsm.c" "../drivers/ds18b20.c"
+                    INCLUDE_DIRS "../include" "../app" "../drivers" REQUIRES esp_driver_gpio)
